--- a/build-constraints.yaml
+++ b/build-constraints.yaml
@@ -3377,7 +3377,7 @@ packages:
         - sdl2-gfx
 
     "Aditya Manthramurthy <aditya.mmy@gmail.com> @donatello":
-        - minio-hs < 0 # via protolude
+        - minio-hs
 
     "ncaq <ncaq@ncaq.net> @ncaq":
         - debug-trace-var
